fix outline not showing when error

--- a/styles.css
+++ b/styles.css
@@ -87,11 +87,11 @@
     }
 
     input:invalid {
-        border: 1px solid red;
+        outline: 1px solid red;
     }
 
     input:valid {
-        border: 1px solid green;
+        outline: 1px solid green;
     }
 
     input:focus {
